--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_statusbarcolor: ^0.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
