--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: any
+  shared_preferences: any
 
 dev_dependencies:
   flutter_test:
