--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_statusbarcolor: ^0.2.3
+  flutter_slidable: "^0.5.5"
 
 
   # The following adds the Cupertino Icons font to your application.
