--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: any
   shared_preferences: any
+  font_awesome_flutter: ^8.2.0
 
 dev_dependencies:
   flutter_test:
