--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: any
   shared_preferences: any
   font_awesome_flutter: ^8.2.0
+  provider: ^4.3.1
 
 dev_dependencies:
   flutter_test:
