--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: any
   font_awesome_flutter: ^8.2.0
   provider: ^4.3.1
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
