--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -82,6 +82,19 @@ flutter:
           weight: 700
         - asset: lib\assets\fonts\AvenirLTStd-Book.otf
           weight: 300
+    - family: Montserrat
+      fonts:
+        - asset: lib\assets\fonts\google_fonts\Montserrat-Black.ttf
+          weight: 900
+        - asset: lib\assets\fonts\google_fonts\Montserrat-Italic.ttf
+          style: italic
+        - asset: lib\assets\fonts\google_fonts\Montserrat-Light.ttf
+          weight: 300
+        - asset: lib\assets\fonts\google_fonts\Montserrat-Medium.ttf
+          weight: 500
+        - asset: lib\assets\fonts\google_fonts\Montserrat-SemiBold.ttf
+          weight: 600
+        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
