--- a/artemisfood/pubspec.yaml
+++ b/artemisfood/pubspec.yaml
@@ -29,12 +29,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
   http: any
   shared_preferences: any
-  font_awesome_flutter: ^8.2.0
   provider: ^4.3.1
   google_fonts: ^1.1.0
+  shimmer: ^1.1.1
 
 dev_dependencies:
   flutter_test:
